# leptos-struct-table-macro

./: Cargo.toml
.github/workflows/: ci.yml
src/: lib.rs  models.rs  table.rs  table_row.rs
