[package]
name = "leptos-struct-table-macro"
version = "0.15.0"
edition = "2024"
description = "Macros for the leptos-struct-table crate."
exclude = ["examples/", "tests/"]
license = "MIT OR Apache-2.0"
#readme = "README.md"
repository = "https://github.com/Synphonyte/leptos-struct-table"

[lib]
proc-macro = true

[dependencies]
syn = "2.0"
quote = "1.0"
darling = "0.23"
proc-macro2 = "1.0"
heck = "0.5"

[features]
i18n = []
